fix: main 화면에서 overflow 문제 수정

--- a/Front/musicnote/src/styles/Global.css
+++ b/Front/musicnote/src/styles/Global.css
@@ -101,6 +101,7 @@ body {
   flex-direction: column;
   align-items: center;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 #root {
